# pyllym

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  new-branch.sh  pyproject.toml  reactullm-pyllum.contract.json  reactullm-pyllum.runtime.json
.claude/: settings.json
.claude/hooks/: block-dangerous-commands.sh
.claude/skills/add-provider/: SKILL.md
.claude/skills/bdd-build/: SKILL.md
.claude/skills/dev-checks/: SKILL.md
.claude/skills/pyllm-structured-prompting/: SKILL.md
.claude/skills/pyllym-structured-prompting/: SKILL.md
.github/: dependabot.yml
.github/workflows/: publish.yml
examples/: .gitignore  README.md  _bootstrap.py  analysis_tools.toml  chat.py  moderation.py  stats.py  stream.py  structured.py  tools.py
src/pyllm/: __init__.py  agent.py  attachment.py  chat.py  citation.py  configuration.py  connection.py  content.py  cost.py  errors.py  image.py  mime_type.py  models.py  moderation.py  protocol.py  provider.py  search_results.py  speech.py  stream_accumulator.py  streaming.py  thinking.py  tokens.py  tool.py  tool_call.py  uploaded_file.py  utils.py  video.py
src/pyllm/bdd/: __init__.py  __main__.py  brief.py  builder.py  planner.py  renderer.py  safety.py  toml_spec.py
src/pyllm/celery/: __init__.py  tasks.py
src/pyllm/model/: __init__.py  modalities.py  pricing.py  pricing_category.py  pricing_tier.py
src/pyllm/persistence/: __init__.py  models.py
src/pyllm/protocols/: __init__.py  anthropic.py  chat_completions.py  converse.py  fal.py  gemini.py
src/pyllm/providers/: __init__.py  anthropic.py  azure.py  bedrock.py  databricks.py  deepseek.py  doubao.py  ernie.py  fal.py  gemini.py  openai.py  openai_compatible.py  perplexity.py  qwen.py  vertexai.py  vllm.py  xai.py  zhipu.py
src/pyllm/tdg/: __init__.py  __main__.py  brief.py  builder.py  deps.py  planner.py  renderer.py  runs.py  safety.py  schema.py  sequence.py  toml_spec.py
src/pyllym/: __init__.py  agent.py  aliases.py  attachment.py  chunk.py  configuration.py  connection.py  content.py  context.py  cost.py  embedding.py  errors.py  image.py  mcp.py  message.py  models.py  models_schema.json  protocol.py  provider.py  reactllm_bridge.py  reactullm_bridge.py  reactullm_handoff.py  reactullm_runtime.py  stream_accumulator.py  streaming.py  tool.py  toolset.py  transcription.py  video.py
src/pyllym/bdd/: __init__.py  __main__.py  brief.py  builder.py  checks.py  planner.py  renderer.py  safety.py  toml_spec.py
src/pyllym/celery/: __init__.py  tasks.py
src/pyllym/model/: info.py
src/pyllym/persistence/: __init__.py  models.py
src/pyllym/protocols/: anthropic.py  chat_completions.py  converse.py  gemini.py
src/pyllym/providers/: bedrock.py  capabilities.py  cerebras.py  fal.py  gpustack.py  huggingface.py  minimax.py  mistral.py  moonshot.py  nvidia.py  ollama.py  openai.py  openrouter.py  vertexai.py
src/pyllym/tdg/: __init__.py  __main__.py  brief.py  builder.py  deps.py  planner.py  renderer.py  runs.py  safety.py  toml_spec.py
tests/: conftest.py  factories.py  seed_fixtures.py  test_bdd.py  test_bedrock.py  test_behaviors.py  test_capabilities.py  test_celery.py  test_chat.py  test_connection_errors.py  test_core.py  test_errors.py  test_fal.py  test_gemini_extra.py  test_mcp.py  test_ollama.py  test_persistence.py  test_provider_matrix.py  test_reactullm_bridge.py  test_reactullm_handoff.py  test_reactullm_runtime.py  test_review_fixes.py  test_seeder.py  test_tdg_deps.py  test_tdg_runs.py  test_toolset.py  test_value_objects.py
