[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyllym"
version = "1.16.0"
description = "One delightful, async-first Python framework for every major AI provider."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "pyllym contributors" }]
keywords = [
    "llm", "ai", "openai", "anthropic", "gemini", "bedrock", "mistral",
    "ollama", "chatbot", "agents", "embeddings", "rag", "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.14",
    "pydantic>=2.7",
]

[project.optional-dependencies]
db = ["sqlalchemy>=2.0"]
celery = ["celery>=5.4"]
mime = ["puremagic>=1.28"]
# Scientific stack for the data-analysis examples (examples/stats.py). Opt-in:
# `pip install -e ".[sci]"`. Not needed by the core library.
sci = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "sympy>=1.12",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7.8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/PhotonEra-B-V/malayopython_reticulatus_llm"
Source = "https://github.com/PhotonEra-B-V/malayopython_reticulatus_llm"

[tool.hatch.build.targets.wheel]
packages = ["src/pyllym"]

[tool.hatch.build.targets.wheel.force-include]
"src/pyllym/models.json" = "pyllym/models.json"
"src/pyllym/aliases.json" = "pyllym/aliases.json"
"src/pyllym/models_schema.json" = "pyllym/models_schema.json"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RUF"]
ignore = ["B008", "RUF012", "SIM108", "SIM105", "RUF005", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"examples/*" = ["E501"]  # example scripts embed long data (e.g. quote strings)

[tool.mypy]
python_version = "3.13"
packages = ["pyllym"]
mypy_path = "src"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
